--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
     "roadhogbuild": "roadhog build",
     "lint": "eslint --ext .js src test",
     "precommit": "npm run lint",
-    "build": "webpack  --config webpack.config.js",
-    "start": "node server.js"
+    "devbuild": "cross-env NODE_ENV=development webpack --config webpack.dev.config.js --progress --color",
+    "probuild": "cross-env NODE_ENV=production webpack --config webpack.config.js --progress --color",
+    "start": "cross-env NODE_ENV=development node server.js"
   },
   "engines": {
     "install-node": "6.11.1"
   },
   "dependencies": {
     "antd": "^3.0.0",
+    "autoprefixer-loader": "^3.2.0",
     "babel-plugin-import": "^1.6.2",
     "babel-runtime": "^6.9.2",
     "clean-webpack-plugin": "^0.1.17",
+    "cross-env": "^5.1.3",
     "dva": "^2.1.0",
     "fetch-jsonp": "^1.1.3",
     "history": "^4.7.2",
