--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "clean-webpack-plugin": "^0.1.17",
     "cross-env": "^5.1.3",
     "dva": "^2.1.0",
+    "fetch-ie8": "^1.5.0",
     "fetch-jsonp": "^1.1.3",
     "history": "^4.7.2",
     "jQuery": "^1.7.4",
     "jquery": "^3.2.1",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.4",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
