--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "antd": "^3.1.0",
     "autoprefixer-loader": "^3.2.0",
     "babel-plugin-import": "^1.6.2",
+    "babel-preset-env": "^1.6.1",
     "babel-runtime": "^6.9.2",
     "clean-webpack-plugin": "^0.1.17",
     "cross-env": "^5.1.3",
     "dva": "^2.1.0",
+    "expose-loader": "^0.7.4",
+    "fetch-detector": "^1.0.1",
     "fetch-ie8": "^1.5.0",
     "fetch-jsonp": "^1.1.3",
     "history": "^4.7.2",
@@ -28,6 +31,7 @@
     "jquery": "^3.2.1",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.4",
+    "promise-polyfill": "^7.0.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-router-redux": "^5.0.0-alpha.9",
