--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-router-redux": "^5.0.0-alpha.9",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-devtools-log-monitor": "^1.4.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "webpack-manifest-plugin": "^1.3.2"
