--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "startroadhog": "roadhog server",
     "roadhogbuild": "roadhog build",
+    "eslintinit": "eslint --init",
     "lint": "eslint --ext .js src test",
     "precommit": "npm run lint",
     "devbuild": "cross-env NODE_ENV=development webpack --config webpack.dev.config.js --progress --color",
@@ -27,13 +28,17 @@
     "fetch-ie8": "^1.5.0",
     "fetch-jsonp": "^1.1.3",
     "history": "^4.7.2",
+    "intl": "^1.2.5",
     "jQuery": "^1.7.4",
     "jquery": "^3.2.1",
     "js-cookie": "^2.2.0",
+    "json-server": "^0.12.1",
     "lodash": "^4.17.4",
+    "mockjs": "^1.0.1-beta3",
     "promise-polyfill": "^7.0.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
+    "react-intl": "^2.4.0",
     "react-router-redux": "^5.0.0-alpha.9",
     "redux-devtools": "^3.4.1",
     "redux-devtools-dock-monitor": "^1.1.3",
@@ -47,7 +52,7 @@
     "babel-eslint": "^7.1.1",
     "babel-plugin-dva-hmr": "^0.3.2",
     "babel-plugin-transform-runtime": "^6.9.0",
-    "eslint": "^3.12.2",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
