--- a/package.json
+++ b/package.json
@@ -10,17 +10,28 @@
     "devbuild": "cross-env NODE_ENV=development webpack --config webpack.dev.config.js --progress --color",
     "probuild": "cross-env NODE_ENV=production webpack --config webpack.config.js --progress --color",
     "start": "cross-env NODE_ENV=development node server.js",
-    "startMock": "json-server api/resourse/db.json --port 8002"
+    "startMock": "json-server api/resourse/db.json --port 8002",
+    "test": "jest ./src/*"
   },
   "engines": {
     "install-node": "6.11.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    },
+    "transform": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/fileTransformer.js"
+    }
   },
   "dependencies": {
     "ant-design-pro": "^0.3.1",
     "antd": "^3.1.0",
     "autoprefixer-loader": "^3.2.0",
     "babel-plugin-import": "^1.6.2",
+    "babel-plugin-transform-require-ignore": "^0.1.1",
     "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
     "babel-runtime": "^6.9.2",
     "clean-webpack-plugin": "^0.1.17",
     "cross-env": "^5.1.3",
@@ -32,6 +43,7 @@
     "history": "^4.7.2",
     "intl": "^1.2.5",
     "jQuery": "^1.7.4",
+    "jest": "^22.2.2",
     "jquery": "^3.2.1",
     "js-cookie": "^2.2.0",
     "json-server": "^0.12.1",
